# hungerland

./: CMakeLists.txt  LICENSE  README.md  git_addfiles.sh  git_commit_push.sh  make_release.sh
cmake/: mingw-w64-x86_64.cmake
engine/: CMakeLists.txt  Doxyfile
engine/doxygen/: DoxygenLayout.xml  extra.css  warnings.txt
engine/ext/mikroplot-main/: CMakeLists.txt
engine/ext/mikroplot-main/include/mikroplot/: texture.h  window.h
engine/ext/mikroplot-main/src/: texture.cpp  window.cpp
engine/ext/tmxlite-master/tmxlite/: CMakeLists.txt
engine/ext/tmxlite-master/tmxlite/include/tmxlite/: Layer.hpp
engine/ext/tmxlite-master/tmxlite/src/: ImageLayer.cpp  Map.cpp
engine/include/hungerland/: engine.h  framebuffer.h  gl_utils.h  graphics.h  map.h  math.h  mesh.h  screen.h  shader.h  texture.h  types.h  util.h  window.h
engine/src/: engine.cpp  framebuffer.cpp  gl_graphics.cpp  gl_mesh.cpp  gl_screen.cpp  map.cpp  shader.cpp  shader.inl  texture.cpp  util.cpp  window.cpp
examples/: platformer.h
examples/cs/: main.cpp
examples/networkgame/app/: main_client.cpp  main_random_agent.cpp  standalone_app.h
examples/networkgame/game/: init_game.h
examples/networkgame/netgame/: netcode.h
examples/platformer/: main.cpp  platformer.h  platformer_main.cpp
examples/platformer/assets/: test_world0.tmx  test_world1.tmx  test_world3.tmx  untitled.tmx
examples/platformer/assets/Tileset/: Map_decor.tsx  Map_tileset.tsx
ext/glm-master/: CMakeLists.txt
ext/mikroplot-main/: CMakeLists.txt
ext/mikroplot-main/examples/: main_mikroplot_demo.cpp
ext/mikroplot-main/include/mikroplot/: GLUtils.h
ext/tmxlite-master/OpenGLExample/: CMakeLists.txt
ext/tmxlite-master/tmxlite/src/: Tileset.cpp
games/cs/: main.cpp
games/platformer/assets/: world1.tmx
include/: MapLayer.cpp  MapLayer.hpp  util.h
include/engine/: map.h
networkgame/: CMakeLists.txt
networkgame/app/: client_app.h  main_shard_server.cpp  main_standalone.cpp  shard_app.h
networkgame/game/: find_goal_game.h  game.h  model.h
networkgame/netgame/: app_protocol.h  serialize.h
src/: shader.inl
